# ctf-library

./: .gitignore  README.md  pyproject.toml  requirements-build.txt  requirements-sphinx.txt  requirements.txt
ctf_library/: __init__.py
ctf_library/cipher/: book_cipher.py  hill_cipher.py  quagmire_cipher.py  rail_fence_cipher.py  rot13_cipher.py  rsa_demo.py  substitution_cipher.py
ctf_library/file_format/: file_format.py  gzipfile_format.py  jfif_format.py  pngfile_format.py  windows_defender_quarantine_file.py  zipfile_format.py
ctf_library/hash/: hash_search.py
ctf_library/io/: __init__.py  ctf_challenge_shell.py  fileio.py  remote_connection.py  remote_connection_shell copy.py  remote_connection_shell.py
ctf_library/language/: bf.py
ctf_library/math/: chinese_remainder_theorem.py  factorization.py  integer_matrix_math.py  mathlib.py  modular_arithmetic.py
ctf_library/packet/: usb_keystroke_decoder.py
docs/: index.md  known_issues.md
docs/cipher/: cipher.md
docs/file_format/: file_format.md
docs/io/: remote_connection.md
docs/language/: esolangs.md
docs/math/: mathlib.md
docs/notes/: autorecon-installation.md  index.md
docs/packet/: usb_keystroke_decoder.md
docs/sphinx-docs/: .gitignore
tests/cipher/: book_cipher_test.py  hill_cipher_test.py  quagmire_cipher_test.py  rail_fence_cipher_test.py  rot13_cipher_test.py  rsa_demo_test.py  substitution_cipher_test.py
tests/file_format/: gzipfile_format_test.py  jfif_format_test.py  pngfile_format_test.py  zipfile_format_test.py
tests/hash/: hash_search_test.py
tests/io/: echo_server.py  (+2 more)
(+28 files in other folders)
